--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /Proyecto/Sintactica/nbproject/private/
 /Proyecto/Sintactica/build/
 /Proyecto/Sintactica/dist/
+/Proyecto/pruebas/nbproject/private/
+/Proyecto/pruebas/build/
+/Proyecto/TP2/nbproject/private/
+/Proyecto/TP2/build/
