--- a/Proyecto/Sintactica/nbproject/project.properties
+++ b/Proyecto/Sintactica/nbproject/project.properties
@@ -30,6 +30,7 @@ excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\jdani\\OneDrive\\Documents\\NetBeansProjects\\PMMS\\src\\lib\\AbsoluteLayout.jar
 file.reference.beansbinding-1.2.1.jar=C:\\Users\\jdani\\OneDrive\\Documents\\NetBeansProjects\\PMMS\\src\\lib\\beansbinding-1.2.1.jar
 file.reference.curvesapi-1.03.jar=C:\\Users\\jdani\\OneDrive\\Documents\\NetBeansProjects\\PMMS\\src\\lib\\curvesapi-1.03.jar
+file.reference.kotlin-runtime.jar=C:\\Users\\jdani\\AppData\\Roaming\\NetBeans\\8.2\\kotlinc\\lib\\kotlin-runtime.jar
 file.reference.poi-3.15-beta1.jar=C:\\Users\\jdani\\OneDrive\\Documents\\NetBeansProjects\\PMMS\\src\\lib\\poi-3.15-beta1.jar
 file.reference.poi-excelant-3.15-beta1.jar=C:\\Users\\jdani\\OneDrive\\Documents\\NetBeansProjects\\PMMS\\src\\lib\\poi-excelant-3.15-beta1.jar
 file.reference.poi-ooxml-3.15-beta1.jar=C:\\Users\\jdani\\OneDrive\\Documents\\NetBeansProjects\\PMMS\\src\\lib\\poi-ooxml-3.15-beta1.jar
@@ -58,7 +59,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${kotlinc.classpath}:
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -72,6 +74,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+kotlinc.classpath=${file.reference.kotlin-runtime.jar}
 main.class=sintactica.Sintactica
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -79,7 +82,8 @@ mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${kotlinc.classpath}:
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
